2008-01-29 Gary Readler <gdr@us.ibm.com>

	* httpAdapter.c:
	Fixed 1725489 sfcb sending zero sized chunks in response


2008-01-29 Gary Readler <gdr@us.ibm.com>

	* providerMgr.c:
	Fixed 1878340 sfcb does not complete chunked transfer sfcb hangs

2008-01-25 Chris Buccella  <buccella@linux.vnet.ibm.com>

	* msgqueue.c:
	Fixed 1879330: Uninitialised memory in spSendMsg() and spSendCtl()
	(patch by Tim Potter)
	
2008-01-24 Chris Buccella  <buccella@linux.vnet.ibm.com>

	* support.c:
	Fixed 1879262: SFCB does a double free when processing a request

2008-01-21 Gary Readler <gdr@us.ibm.com>
	* dbpAdapter.c,httpAdapter.c
	fIXED 1854481: bzero() is deprecated

2008-01-11 Sven Schuetz <sven@de.ibm.com>

	* cimXmlRequest.c, objectImpl.c:
	Fixed 1868692: embedded inst support broken

2008-01-10  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* indCIMXMLExport.c:
	Fixed 1866424: Indication sending via https does not include client cert
	(patch by Peter Mellquist)
	
2008-01-09  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cmpift.h, cmpimacs.h, interopProvider.h:
	Fixed 1830845: standards naming issue for _CMPIBrokerFT.enumInstances()
	(patch by Sean Swehla)

	* cmpift.h:
	Fixed 1826571: Fixed wrong type for _CMPIBroker.brokerCapabilities
	(patch by Sean Swehla)
	
2008-01-08  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* instance.c:
	Fixed 1850416: Deadlock in getObjectPath() (patch by Tim Potter)

2007-12-21  Sven Schuetz <sven@de.ibm.com>

	* cimXmlRequest.c, cimXmlOps.y, internalProvider.c, providerMgr.c,
	providerDrv.c, instance.c, cimXmlGen.h, providerMgr.h, cimXmlParser.h,
	cimXmlGen.c, providerRegister.c, cimXmlParser.c, README
	Fixed 1560680: sfcb property operations not supported

2007-12-05  Sven Schuetz <sven@de.ibm.com>

	* cimXmlOps.y, array.c, cimXmlParser.c:
	Fixed 1828678: REFARRAY not supported

2007-11-14  Viktor Mihajlovski  <mihajlov@localhost.localdomain>

	* httpAdapter.c: 
	Fixed 1831794: unfinished SSL handshake blocks HTTP adapter