@@ -21,6 +21,7 @@ Bugs fixed:
 - 1879330 Fixed Uninitialised memory in spSendMsg() and spSendCtl()
 - 1878340 Fixed sfcb does not complete chunked transfer , sfcb hangs
 - 1725489 Fixed sfcb:Zero sized chunks in response
+- 1879319 Fixed various unused variable warnings
 
 Changes in 1.2.5
 ================
