@@ -1,3 +1,11 @@
+2008-01-29 Chris Buccella  <buccella@linux.vnet.ibm.com>
+
+	* cimXmlGen.c, cimcClientSfcbLocal.c, classProvider.c, 
+	classProviderMem.c, indCIMXMLHandler.c, objectImpl.c,
+	objectImplSwapI32toP32.c:
+	Fixed 1879319: various unused variable warnings
+	(patch proposed by Tim Potter)
+	
 2008-01-29 Gary Readler <gdr@us.ibm.com>
 
 	* httpAdapter.c:
